--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,48 @@
-theme: hacked-jekyll
-title: ""
-description: ""
-baseurl: ""
-url: ""
+# Site Specific Configuration
+name: LightSpeed
+description: A simple Jekyll theme
+url: https://example.com
+author: tajacks
+timezone: America/Toronto
+timezone_short: ET
 
-lowercase: true
-color_bg: var(--oc-gray-9)
-color_punct: var(--oc-green-9)
-color_keyval: var(--oc-green-4)
-color_hover: var(--oc-green-5)
-show_quotes: true
-show_commas: true
-target: "_self"
+# Keywords
+keywords: ['seo', 'key', 'words']
 
+# Analytics (Plausible requires sign-up)
+analytics:
+  plausible:
+    enabled: false
+    site_fqdn: 'your.site.fqdn'
+    script_source: 'https://plausible.io/js/script.js'
+
+# Styling
+sass:
+  sass_dir: _sass
+  style: expanded # compact, expanded or compressed
+
+# Paginate
+pagination:
+  enabled: true
+  # Value set low for demonstration purposes
+  per_page: 3
+  sort_field: 'date'
+  sort_reverse: true
+
+# Category Paginating
+autopages:
+  enabled: true
+  categories:
+    title: 'Posts in category :cat'
+    permalink: '/category/:cat'
+    silent: false
+
+# Exclusions
+exclude: [ 'README.md', 'COPYING' ]
+
+# Plugins
 plugins:
+  - jekyll-feed
+  - jekyll-paginate-v2
   - jekyll-seo-tag
-  - jekyll-sitemap
+
