--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ plugins:
   - jekyll-include-cache # add this line to the plugins list if you already have one
   - jekyll-paginate
 
-title: hola ASIR2
+title: Pagina super guapa de Fran
 
 defaults:
   - scope:
@@ -41,5 +41,5 @@ paginate_path: /blog/page:num/
 minima:
   skin: dark
 
-name: oscar novillo
+name: Francisco Guindulain
   
